--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "first hexlet project",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/grechkamanka/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/grechkamanka/frontend-project-lvl1#readme"
+  "type": "module",
+  "homepage": "https://github.com/grechkamanka/frontend-project-lvl1#readme",
+  "dependencies": {
+    "bash": "^0.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.30.0",
+    "prettier": "^2.3.2"
+  }
 }
